<?xml version="1.0" encoding="utf-8"?>
<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_height="wrap_content"
	android:layout_width="match_parent"
	tools:ignore="HardcodedText">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:gravity="start|top">

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/part1"
			android:layout_marginBottom="10dp"
			android:textColor="#000"/>

		<ImageView
			android:layout_width="wrap_content"
			android:layout_height="480dp"
			android:src="@drawable/img1"/>

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/part2"
			android:textColor="#000"/>

		<ImageView
			android:layout_width="wrap_content"
			android:layout_height="480dp"
			android:src="@drawable/img2"/>

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/part3"
			android:textColor="#000"/>

		<ImageView
			android:layout_width="wrap_content"
			android:layout_height="480dp"
			android:src="@drawable/img3"/>

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/part4"
			android:textColor="#000"/>

		<ImageView
			android:layout_width="wrap_content"
			android:layout_height="240dp"
			android:src="@drawable/img4"/>

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/part5"
			android:textColor="#000"/>

		<ImageView
			android:layout_width="wrap_content"
			android:layout_height="120dp"
			android:src="@drawable/img5"/>

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/part6"
			android:textColor="#000"/>

		<ImageView
			android:layout_width="wrap_content"
			android:layout_height="100dp"
			android:src="@drawable/img6"/>

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/part7"
			android:textColor="#000"/>

		<ImageView
			android:layout_width="wrap_content"
			android:layout_height="100dp"
			android:src="@drawable/img7"/>

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/part8"
			android:textColor="#000"/>

		<ImageView
			android:layout_width="wrap_content"
			android:layout_height="180dp"
			android:src="@drawable/img8"/>

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/part9"
			android:textColor="#000"/>

		<ImageView
			android:layout_width="wrap_content"
			android:layout_height="140dp"
			android:src="@drawable/img9"/>

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="HttpCanary下载"
			android:textColor="#00f"
			android:layout_marginTop="10dp"
			android:id="@+id/hcdl"/>

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="Fiddler下载"
			android:textColor="#00f"
			android:id="@+id/fddl"/>

	</LinearLayout>

</ScrollView>
